# MapGenerator

./: .gitignore  CLAUDE.md  build.bat  build_err.txt  build_out.txt  world_export.csv
.claude/: settings.local.json
MapGenerator/: CMakeLists.txt  CMakePresets.json
MapGenerator/headers/: Camera.h  Game.h  InfoPanel.h  MapGenerator.h  Terrain.h  Tile.h  World.h
MapGenerator/source/: Camera.cpp  Game.cpp  InfoPanel.cpp  MapGenerator.cpp  World.cpp
